--- a/config.yml
+++ b/config.yml
@@ -4,5 +4,5 @@
   become: no
   gather_facts: no
   tasks:
-  - git: https://github.com/john-deng/install-docker-on-centos.git dest=/root/install-docker-on-centos refspec=+refs/pull/*:refs/heads/*
+  - git: http://192.168.1.22:8022/deployment/install-centos-server.git dest=/root/install-docker-on-centos refspec=+refs/pull/*:refs/heads/*
   - script: /root/install-centos-server/install-docker-on-centos.sh
