update for aliyun

--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,13 @@
 ---
 
+- include: fetch-scripts.yml
+
 - hosts: all
   become: no
   gather_facts: no
   tasks:
-  - shell: ./install-common-tools.sh chdir=/root/install
-  - shell: ./install-docker-on-centos.sh all storage=vdb chdir=/root/install
+  - name: install common tools
+    shell: ./install-common-tools.sh chdir=/root/install
+  - name: install docker
+    shell: ./install-docker-on-centos.sh all storage=sdb chdir=/root/install
+ 
